--- a/cmake/bitcoindecentral-build-config.h.in
+++ b/cmake/bitcoindecentral-build-config.h.in
@@ -29,6 +29,13 @@
 /* Bug report URL for Bitcoin Decentral */
 #define CLIENT_BUGREPORT "https://github.com/bitcoindecentral/bitcoindecentral/issues"
 
+/* Client URL for Bitcoin Decentral */
+#define CLIENT_URL "https://bitcoindecentral.org"
+
+/* Copyright holders for Bitcoin Decentral */
+#define COPYRIGHT_HOLDERS "The Bitcoin Decentral developers"
+#define COPYRIGHT_HOLDERS_SUBSTITUTION "Bitcoin Decentral developers"
+
 /* Define to the version of this package. */
 #define PACKAGE_VERSION "@PACKAGE_VERSION@"
 
