🚀 PHASE 2 CTOR IMPLEMENTATION - Major Progress!
✅ CTOR MODULE STRUCTURE COMPLETE:
- Created comprehensive CTOR (Canonical Transaction Ordering) module
- Implemented ordering.h/cpp: Core transaction sorting algorithms
- Implemented validation.h/cpp: Block and consensus validation
- Implemented consensus.h/cpp: BIP9 activation and fork management

🔧 BUILD SYSTEM INTEGRATION:
- Added CTOR modules to CMakeLists.txt build configuration
- Integrated CTOR validation into Bitcoin Decentral's consensus system
- Added CTOR includes to validation.cpp and miner.cpp
- Fixed compilation issues and logging functions

⚡ SCALING FEATURES IMPLEMENTED:
- Canonical transaction ordering by txid (lexicographic)
- Block validation for CTOR compliance
- Mining integration for ordered block templates
- Activation logic with configurable height (1000 blocks)
- Consensus validation integrated into ContextualCheckBlock

📊 PHASE 2 MILESTONE 2.1 PROGRESS:
- CTOR specification: ✅ Complete
- Core algorithms: ✅ Complete
- Consensus integration: ✅ Complete
- Build system: ✅ Complete
- Testing: 🔄 In Progress

🎯 NEXT: Complete CTOR testing and validation, then proceed to unbounded block size implementation

Bitcoin Decentral: Revolutionary scaling through Canonical Transaction Ordering!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -148,6 +148,9 @@ add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   common/signmessage.cpp
   common/system.cpp
   common/url.cpp
+  scaling/ctor/ordering.cpp
+  scaling/ctor/validation.cpp
+  scaling/ctor/consensus.cpp
   compressor.cpp
   core_read.cpp
   core_write.cpp
