🚀 CI/CD Fix: Add FindLibevent.cmake module and proper linking
- Modified .gitignore to allow cmake/modules/*.cmake files
- Created cmake/modules/FindLibevent.cmake with robust detection logic
- Added libevent linking to bitcoindecentrald, bitcoindecentral-cli, and test_bitcoin
- Uses pkg-config for detection with fallback to standard paths
- Supports both event_core and event libraries with pthreads helper
- Resolves CI build failure: 'No FindLibevent.cmake found in CMAKE_MODULE_PATH'

This completes the libevent dependency resolution for CI/CD pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -35,12 +35,14 @@ bitcoindecentral-wallet
 .DS_Store
 Thumbs.db
 
-# CMake
+# CMake (generated files only, allow modules)
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 Makefile
-*.cmake
+# Allow cmake/modules/*.cmake but block generated files
+!cmake/modules/*.cmake
+!cmake/*.cmake
 
 # Qt
 *.pro.user
