🚀 CI/CD Fix: Add GetTargetInterface module + robust third-party lib fallbacks
- Created cmake/modules/GetTargetInterface.cmake with target interface extraction
- Added GetTargetInterface guard with inline shim in src/CMakeLists.txt
- Added robust fallback logic for crc32c, leveldb, minisketch, secp256k1
- Prefers subtrees when available, falls back to system packages
- Added system library packages to Ubuntu CI: libleveldb-dev, libsecp256k1-dev, libcrc32c-dev
- Added WITH_MINISKETCH option with graceful disable when unavailable
- Prevents CI failures from missing CMake modules and third-party dependencies

This resolves all remaining CI build blockers:
- GetTargetInterface module missing
- get_target_interface() unknown command
- Missing third-party library subtrees/helpers
- Robust cross-platform build compatibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,10 @@ jobs:
           libnatpmp-dev \
           qtbase5-dev \
           qttools5-dev \
-          qttools5-dev-tools
+          qttools5-dev-tools \
+          libleveldb-dev \
+          libsecp256k1-dev \
+          libcrc32c-dev
 
     - name: Install dependencies (macOS)
       if: matrix.os == 'macos-12'
