--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,12 +33,58 @@ foreach(_frag IN ITEMS "crc32c.cmake" "leveldb.cmake" "minisketch.cmake")
     message(STATUS "Optional helper not found: ${_f} (will rely on system packages or targets already defined).")
   endif()
 endforeach()
+
+# If subtrees exist, build them; otherwise rely on system packages.
+# crc32c
+if(EXISTS "${CMAKE_SOURCE_DIR}/src/crc32c/CMakeLists.txt")
+  add_subdirectory("${CMAKE_SOURCE_DIR}/src/crc32c" EXCLUDE_FROM_ALL)
+  set(CRC32C_LIB crc32c)
+else()
+  find_package(PkgConfig QUIET)
+  if(PKG_CONFIG_FOUND)
+    pkg_check_modules(PC_CRC32C QUIET crc32c)
+  endif()
+  find_library(CRC32C_LIB NAMES crc32c HINTS ${PC_CRC32C_LIBRARY_DIRS} /usr/lib /usr/local/lib)
+endif()
+
+# leveldb
+if(EXISTS "${CMAKE_SOURCE_DIR}/src/leveldb/CMakeLists.txt")
+  add_subdirectory("${CMAKE_SOURCE_DIR}/src/leveldb" EXCLUDE_FROM_ALL)
+  set(LEVELDB_LIB leveldb)
+else()
+  find_library(LEVELDB_LIB NAMES leveldb libleveldb HINTS /usr/lib /usr/local/lib)
+endif()
+
+# minisketch (usually subtree; not commonly packaged)
+if(EXISTS "${CMAKE_SOURCE_DIR}/src/minisketch/CMakeLists.txt")
+  add_subdirectory("${CMAKE_SOURCE_DIR}/src/minisketch" EXCLUDE_FROM_ALL)
+  set(MINISKETCH_LIB minisketch)
+else()
+  # Allow building without minisketch if not available
+  option(WITH_MINISKETCH "Enable minisketch-based compact reconciliation" OFF)
+  if(WITH_MINISKETCH)
+    message(FATAL_ERROR "WITH_MINISKETCH=ON but no subtree found and no system package available.")
+  else()
+    add_compile_definitions(BITCOIN_NO_MINISKETCH=1)
+  endif()
+endif()
 add_subdirectory(univalue)
 #=============================
 # secp256k1 subtree
 #=============================
 message("")
-message("Configuring secp256k1 subtree...")
+
+# secp256k1: prefer subtree if present; otherwise system dev package
+if(EXISTS "${CMAKE_SOURCE_DIR}/src/secp256k1/CMakeLists.txt")
+  message(STATUS "Configuring secp256k1 subtree...")
+else()
+  find_library(SECP256K1_LIB NAMES secp256k1 HINTS /usr/lib /usr/local/lib)
+  if(NOT SECP256K1_LIB)
+    message(FATAL_ERROR "secp256k1 not found (no subtree and no system library).")
+  endif()
+  # Skip subtree configuration if using system library
+  return()
+endif()
 set(SECP256K1_DISABLE_SHARED ON CACHE BOOL "" FORCE)
 set(SECP256K1_ENABLE_MODULE_ECDH OFF CACHE BOOL "" FORCE)
 set(SECP256K1_ENABLE_MODULE_RECOVERY ON CACHE BOOL "" FORCE)
@@ -53,7 +99,27 @@ if(NOT BUILD_TESTS)
   set(SECP256K1_BUILD_CTIME_TESTS ${BUILD_TESTS} CACHE BOOL "" FORCE)
 endif()
 set(SECP256K1_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-include(GetTargetInterface)
+set(_gtif "${CMAKE_SOURCE_DIR}/cmake/modules/GetTargetInterface.cmake")
+if(EXISTS "${_gtif}")
+  include("${_gtif}")
+else()
+  message(STATUS "GetTargetInterface.cmake missing; defining inline shim.")
+  function(get_target_interface tgt OUT_INCLUDES OUT_LIBS)
+    if(NOT TARGET ${tgt})
+      message(FATAL_ERROR "get_target_interface(): '${tgt}' is not a target")
+    endif()
+    get_target_property(_incs ${tgt} INTERFACE_INCLUDE_DIRECTORIES)
+    if(NOT _incs)
+      set(_incs "")
+    endif()
+    get_target_property(_libs ${tgt} INTERFACE_LINK_LIBRARIES)
+    if(NOT _libs)
+      set(_libs "")
+    endif()
+    set(${OUT_INCLUDES} "${_incs}" PARENT_SCOPE)
+    set(${OUT_LIBS}     "${_libs}" PARENT_SCOPE)
+  endfunction()
+endif()
 # -fsanitize and related flags apply to both C++ and C,
 # so we can pass them down to libsecp256k1 as CFLAGS and LDFLAGS.
 get_target_interface(SECP256K1_APPEND_CFLAGS "" sanitize_interface COMPILE_OPTIONS)
